# pl-predictor

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json
ml/: prediction.py
scraping/: scraping.py
