[project]
name = "pl_match_predictor"
version = "0.1.0"
description = "Premier League Match Predictor"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraping"] 
